Fixed ignore file and edited readme

--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,8 @@
 ## Resquirrelly specific
 #################
 
-!BuildPackages/
-!Releases/
+BuildPackages/
+Releases/
 !.nuget/NuGet.exe
 
 #################
