Added single-instance mutex.

--- a/Resquirrelly/Resquirrelly.csproj
+++ b/Resquirrelly/Resquirrelly.csproj
@@ -35,6 +35,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>Resquirrelly.StartupManager</StartupObject>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="DeltaCompressionDotNet, Version=1.0.0.0, Culture=neutral, PublicKeyToken=1d14d6e5194e7f4a, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -99,6 +102,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="NativeMethods.cs" />
+    <Compile Include="StartupManager.cs" />
     <Compile Include="Timer.cs" />
     <Compile Include="UpdateHelper.cs" />
     <Page Include="MainWindow.xaml">
